added a new section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-	<p> First git project</p>
+    <p>First git project</p>
+    <section>
+      <h1>Hello world</h1>
+    </section>
   </body>
 </html>
