changed color and input

--- a/form/index.html
+++ b/form/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <form>
-      <input type="text" placeholder="Enter name" />
+      <input type="text" placeholder="Enter your name" />
       <input type="password" placeholder="Enter password" />
       <button>Submit</button>
     </form>
