--- a/form/index.html
+++ b/form/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <form>
+      <div>
+        <input type="text" placeholder="Enter your name" />
+      </div>
       <input type="text" placeholder="Enter your name" />
       <input type="password" placeholder="Enter password" />
+
       <button>Submit</button>
     </form>
   </body>
