--- a/form/index.html
+++ b/form/index.html
@@ -9,6 +9,7 @@
   <body>
     <form>
       <input type="password" placeholder="Enter password" />
+      <textarea>new change</textarea>
       <button>Submit</button>
     </form>
   </body>
