--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/test.css" />
     <title>Document</title>
   </head>
   <body>
-    <p>First git project</p>
-    <section>
-      <h1>Hello <span style="color: red"> world ! </span></h1>
-    </section>
+    <header>
+    </header>
+    <nav>
+      <a href="/html/">HTML</a> | <a href="/css/">CSS</a> |
+      <a href="/js/">JavaScript</a> |
+      <a href="/python/">Python</a>
+    </nav>
+    <nav>
+      <ul>
+        <li style="color: red">hello</li>
+        <li>bye</li>
+      </ul>
+    </nav>
+    <div class="main-wrapper">
+      <p class="main-heading">Hello</p>
+      <span class="secondary-heading"> Bye </span>
+      <button class="main-btn"> click me </button>
+    </div>
+    <footer></footer>
   </body>
 </html>
